[project]
name = "test_sr_python_braian"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "BraianMendes", email = "00.braian.dev@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "pytest>=8.3.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
